--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,7 @@
 @import './views/pc-views';
 @import './views/index-views';
 @import './views/consoles-views';
+@import './views/404.scss';
 
 @import './layout/header';
 @import './layout/main';
